Resort images folder to include sub-folders header-banner, little, posts, and recipes

--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -2,7 +2,7 @@
 title: "Bold Earth"
 type: "Seasoning Mix"
 date: "August 3, 2025"
-hero: "/images/bold-earth.png"
+hero: "/images/recipes/bold-earth.png"
 text: "My Bold Earth spice mix is a family favorite — a jar of vibrant, warm spices that’s a culinary passport to the rich and storied cultures of North Africa. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. It turns everyday cooking into an adventure, inviting you to savor the depth and complexity of a place where spices tell stories, meals bring people together, and flavors celebrate life’s vibrancy."
 textToo: "For a gloriously simple dinner, scatter it over chicken thighs and whatever vegetables the season offers, then roast until tender. Add rice, and you have a meal that’s both grounding and full of quiet adventure."
 yield: "3/4 cup"
