--- a/src/content/posts/golden-fairy-rings.mdx
+++ b/src/content/posts/golden-fairy-rings.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Golden Fairy Rings"
 date: "August 5, 2025"
-hero: "/images/chanterelles.jpeg"
+hero: "/images/posts/chanterelles.jpeg"
 text: "I found some chanterelles a few days ago. Not with the usual summer abundance that sometimes spills into the woods, but just enough to spark delight. I’ve been craving those golden beauties, their frilled edges gathered like little woodland dancers in fae-like circles.
 
 It’s easy to forget how dry it’s been. We’ve had a few good rainstorms, but without the steady soaking that brings the forest floor to life. Without it, the mushrooms have been scarce. More elusive than usual.
