Add downloadable PDF for Savory Soul MIx

--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -20,4 +20,5 @@ ingredients:
 steps:
   - "Measure and mix all ingredients together."
   - "Store or use as desired."
+pdf: "/downloads/recipes/bold-earth.pdf"
 ---
