--- a/src/content/posts/jar-of-flavor.mdx
+++ b/src/content/posts/jar-of-flavor.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Jars Full of Flavor"
 date: "August 1, 2025"
-hero: "/images/posts/bold-earth.jpeg"
+hero: "/images/posts/bold-earth.png"
 text: "I’m notoriously both lazy and busy. While I do love the romance of an all-day simmering sauce — the slow burble of a pot on the stove, the kitchen filled with tantalizing scents — most days are far too hectic for that kind of cooking. That’s where my jars of go-to spice mixes come in as a quiet blessing.
 
 Every so often, my younger daughter and I set aside a Saturday morning to measure, mix, and stir together our favorite blends. It’s a simple ritual: spoonfuls of this and that, a little giggling over the spice scale, and jars lined up neatly on the shelf by the time we’re done.
