--- a/src/content/recipes/savory-soul.mdx
+++ b/src/content/recipes/savory-soul.mdx
@@ -3,6 +3,7 @@ title: "Savory Soul"
 type: "Seasoning Mix"
 date: "August 1, 2025"
 hero: "/images/recipes/savory-soul.png"
+tags: ["spice-mix"]
 text: "My Savory Soul spice mix is pure funk for your taste buds—bold, soulful, and unapologetically delicious. Like a James Brown anthem, this mix gets you up & moving, and feeling good in the kitchen. It’s packed with vibrant spices that groove together in perfect harmony, bringing rhythmic heat and a touch of smoky sweetness to every dish. One shake, and you’ll feel the soulful sway of smoky paprika, and the comforting bite of garlic and onion. Savory Soul isn’t just a seasoning—it’s a celebration of flavor, life, and everything that makes a meal sing."
 textToo: "Toss it over chicken thighs and vegetables for a one-pan wonder that’ll have everyone asking for an encore. Pair it with rice and beans, and you’ve got a dinner that’s as easy as it is unforgettable."
 yield: "7/8 cup"
