Cleaned mdx output to accommodate flexible line breaks and added links to urls

--- a/src/content/posts/golden-fairy-rings.mdx
+++ b/src/content/posts/golden-fairy-rings.mdx
@@ -3,5 +3,12 @@ title: "Golden Fairy Rings"
 date: "August 5, 2025"
 hero: "/images/posts/chanterelles.jpeg"
 tags: ["woodland"]
-text: "I found some chanterelles a few days ago. Not with the usual summer abundance that sometimes spills into the woods, but just enough to spark delight. I’ve been craving those golden beauties, their frilled edges gathered like little woodland dancers in fae-like circles. It’s easy to forget how dry it’s been. We’ve had a few good rainstorms, but without the steady soaking that brings the forest floor to life. Without it, the mushrooms have been scarce. More elusive than usual. Even the wildflowers that usually bloom with such abandon are more subdued this year. Still lovely in their wild glory, but fewer. A restrained riot of color."
+text: |
+  I found some chanterelles a few days ago. Not with the usual summer abundance that sometimes spills into the woods, but just enough to spark delight. 
+
+  I’ve been craving those golden beauties, their frilled edges gathered like little woodland dancers in fae-like circles. It’s easy to forget how dry or overabundantly wet it’s been. 
+
+  We’ve had a few good rainstorms, but without the steady soaking that brings the forest floor to life. Without it, the mushrooms have been scarce. More elusive than usual.
+
+  Even the wildflowers that usually bloom with such abandon are more subdued this year. Still lovely in their wild glory, but fewer. A restrained riot of color.
 ---
