Fixed dropDownPanels for Posts and Recipes. Standardized panels; Add Craft pattern pdf.

--- a/src/content/posts/ballband-kitchen-clothes.mdx
+++ b/src/content/posts/ballband-kitchen-clothes.mdx
@@ -12,8 +12,9 @@ text: |
 
   My kitchen drawers are full of them, and they get daily use — wiping counters, drying dishes, and generally making themselves indispensable.
 
-  If you’re a knitter (or want to be), here’s the pattern and my favorite yarn source: 
+  If you’re a knitter (or want to be), here’s my pattern for the little kitchen clothes I make, the original pattern from Canadian Living, and the cotton Dishie yarn from Knit Picks.
 
-  🧶 Pattern: <a href="https://www.ravelry.com/patterns/library/ballband-dishcloth" target="_blank" rel="noopener noreferrer">Ballband Dishcloth</a>  
-  🧶 Yarn: <a href="https://www.knitpicks.com" target="_blank" rel="noopener noreferrer">Dishie Cotton from Knit Picks</a>
+  🧶 My Pattern: <a href="/downloads/patterns/ballband-pattern.pdf" target="_blank" rel="noopener noreferrer">My Dishie Clothes</a>
+  🧶 Original Pattern: <a href="https://www.canadianliving.com/home-and-garden/knitting-and-crochet/article/knit-a-ballband-dishcloth" target="_blank" rel="noopener noreferrer">Ballband Dishcloth</a>  
+  🧶 Dishie Cotton Yarn: <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Dishie Cotton from Knit Picks</a>
 ---
