Fix recipe PDF routing

--- a/src/content/recipes/m-and-m-cookies.mdx
+++ b/src/content/recipes/m-and-m-cookies.mdx
@@ -22,5 +22,6 @@ ingredients:
 
 steps:
   - "Measure and layer the ingredients in order."
-pdf: "/downloads/recipes/m-and-m-cookies.pdf"
+pdf: "m-and-m-cookies.pdf"
+
 ---
