--- a/src/content/recipes/sweet-harmony.mdx
+++ b/src/content/recipes/sweet-harmony.mdx
@@ -19,5 +19,5 @@ ingredients:
 steps:
   - "Measure and mix all ingredients together."
   - "Store or use as desired."
-pdf: "/downloads/recipes/sweet-harmony.pdf"
+pdf: "sweet-harmony.pdf"
 ---
