--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -20,5 +20,5 @@ ingredients:
 steps:
   - "Measure and mix all ingredients together."
   - "Store or use as desired."
-pdf: "/downloads/recipes/bold-earth.pdf"
+pdf: "bold-earth.pdf"
 ---
