Separated Jarring and Cooking/Baking Instructions for Recipes

--- a/src/content/recipes/m-and-m-cookies.mdx
+++ b/src/content/recipes/m-and-m-cookies.mdx
@@ -10,7 +10,7 @@ This mix is elevated by a carefully balanced blend of vanilla and brown sugar, c
 yield: "24 Cookies"
 
 
-prep time: "5 minutes"
+prep time: "10 minutes"
 ingredients:
   - "1 1/2 cup flour"
   - "1 teaspoon baking powder"
@@ -22,6 +22,22 @@ ingredients:
 
 steps:
   - "Measure and layer the ingredients in order."
+
+Baking Instructions:
+bakingPrepTime: "15 minutes"
+bakingTime: "20 minutes"
+bakingIngredients:
+  - "1 Jar M&M Cookie mix"
+  - "1 egg"
+  - "2 Tablespoons milk"
+  - "1 teaspoon vanilla"
+
+bakingSteps:
+  - "Preheat oven to 350°."
+  - "Mix M&M cookie mix with the ingredients above."
+  - "Drop spoonfuls onto prepared cookie sheets."
+  - "Bake for 10 minutes, or until golden. Repeat."
+
 pdf: "m-and-m-cookies.pdf"
 
 ---
