Added bakingPrepTime, bakingTime, bakingIngredients, and bakingSteps to sweet-harmony.mdx

--- a/src/content/recipes/sweet-harmony.mdx
+++ b/src/content/recipes/sweet-harmony.mdx
@@ -19,5 +19,21 @@ ingredients:
 steps:
   - "Measure and mix all ingredients together."
   - "Store or use as desired."
+
+bakingPrepTime: "10 minutes"
+bakingTime: "25 minutes"
+bakingIngredients:
+  - "1.5 pounds of chicken thigh with skin/bone (or your choice of protein)"
+  - "2 cups of zucchini, cut into bite-sized chunks"
+  - "3 Tablespoons of Sweet Harmony spice mix"
+  - "2 Tablespoons of olive oil"
+
+bakingSteps:
+  - "Preheat oven to 425°."
+  - "Place chicken thighs on sheet pan, nestled among the zucchinis."
+  - "Drizzle olive oil over chicken thighs and zucchinis."
+  - "Sprinkle Sweet Harmony over the chicken thighs and zucchinis."
+  - "Bake for 40-45 minutes.  Enjoy with rice or other sides."
+
 pdf: "sweet-harmony.pdf"
 ---
