Added bakingPrepTime, bakingTime, bakingIngredients, and bakingSteps to bold-earth.mdx and savory-soul.mdx

--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -20,5 +20,21 @@ ingredients:
 steps:
   - "Measure and mix all ingredients together."
   - "Store or use as desired."
+
+bakingPrepTime: "10 minutes"
+bakingTime: "45 minutes"
+bakingIngredients:
+  - "1.5 pounds of chicken thigh with skin/bone (or your choice of protein)"
+  - "2 cups of broccoli, cut into bite-sized florets"
+  - "3 Tablespoons of Bold Earth spice mix"
+  - "2 Tablespoons of olive oil"
+
+bakingSteps:
+  - "Preheat oven to 425°."
+  - "Place chicken thighs on sheet pan, nestled among the brocooli florets."
+  - "Drizzle olive oil over chicken thighs and brocooli florets."
+  - "Sprinkle Bold Earth over the chicken thighs and brocooli floretss."
+  - "Bake for 40-45 minutes.  Enjoy with rice or other sides."
+
 pdf: "bold-earth.pdf"
 ---
