--- a/src/content/recipes/southwest-heat.mdx
+++ b/src/content/recipes/southwest-heat.mdx
@@ -4,7 +4,7 @@ date: "August 7, 2025"
 hero: "/images/recipes/spice-mix/southwest-heat.png"
 tags: ["spice-mix"]
 text: "My Southwest Heat seasoning mix is your ticket to bold, zesty, and smoky flavors that bring the heart of the Southwest straight to your kitchen. A perfect medley of chili powder, cumin, and smoked paprika delivers a warm, earthy base, while a hint of crushed red pepper adds just the right amount of fiery kick. Garlic, onion, and oregano round out the profile with savory depth, creating a blend that’s as versatile as it is vibrant."
-textToo: "Sprinkle Southwest Heat generously on ground beef or shredded chicken to create taco night perfection. Use it to spice up roasted veggies, grilled shrimp, or even sprinkle it over popcorn for a snappy snack with attitude. Whether you’re hosting a fiesta or craving a solo culinary adventure, this mix is the ultimate way to add a little heat and a lot of flavor to any dish.r"
+textToo: "Sprinkle Southwest Heat generously on ground beef or shredded chicken to create taco night perfection. Use it to spice up roasted veggies, grilled shrimp, or even sprinkle it over popcorn for a snappy snack with attitude. Whether you’re hosting a fiesta or craving a solo culinary adventure, this mix is the ultimate way to add a little heat and a lot of flavor to any dish."
 yield: "1 cup 1.5 Tablespoons"
 
 prep time: "5 minutes"
