Add Contact page

--- a/src/content/posts/ballband-kitchen-clothes.mdx
+++ b/src/content/posts/ballband-kitchen-clothes.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Ballband Kitchen Clothes"
-date: "August 3, 2025"
+date: "2025-08-25"
 hero: "/images/posts/ballband.jpeg"
 tags: ["crafts"]
 text: |
