--- a/src/content/recipes/chocolate-cranberry-cookies.mdx
+++ b/src/content/recipes/chocolate-cranberry-cookies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Chocolate Cranberry Cookies"
-date: "August 12, 2025"
+date: "2025-09-15"
 hero: "/images/recipes/cookies/chocolate-cranberry-cookies.png"
 tags: ["cookies"]
 
