--- a/src/content/recipes/oatmeal-raisin-cookies.mdx
+++ b/src/content/recipes/oatmeal-raisin-cookies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Oatmeal Raisin Cookies"
-date: "August 16, 2025"
+date: "8-15"
 hero: "/images/recipes/cookies/oatmeal-raisin-cookies.png"
 tags: ["cookies"]
 
