--- a/src/content/recipes/sweet-harmony.mdx
+++ b/src/content/recipes/sweet-harmony.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Sweet Harmony"
-date: "August 15, 2025"
+date: "2025-08-15"
 hero: "/images/recipes/spice-mix/sweet-harmony.png"
 tags: ["spice-mix"]
 text: "My Sweet Harmony spice mix is a symphony for your taste buds—sweet, savory, and unapologetically delightful. Like the perfect melody, this mix strikes just the right balance, combining smoky paprika, garlic, and onion with the gentle warmth of cayenne and mustard. The rich sweetness of dark brown sugar ties it all together, creating a blend that dances on your palate and brings life to every meal. Sweet Harmony isn’t just a seasoning—it’s a celebration of flavor, family, and the magic of shared meals."
