--- a/src/content/recipes/ultimate-brownies.mdx
+++ b/src/content/recipes/ultimate-brownies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Ultimate Brownies"
-date: "August 8, 2025"
+date: "2025-09-15"
 hero: "/images/recipes/cookies/ultimate-brownies.png"
 tags: ["cookies"]
 
