--- a/src/content/posts/golden-fairy-rings.mdx
+++ b/src/content/posts/golden-fairy-rings.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Golden Fairy Rings"
-date: "August 9, 2025"
+date: "2025-08-10"
 hero: "/images/posts/chanterelles.jpeg"
 tags: ["woodland"]
 text: |
