--- a/src/content/posts/jar-of-flavor.mdx
+++ b/src/content/posts/jar-of-flavor.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Jars Full of Flavor"
-date: "August 15, 2025"
+date: "2025-08-15"
 hero: "/images/posts/bold-earth.png"
 tags: ["kitchen"]
 text: |
