--- a/src/content/posts/jar-of-sweetness.mdx
+++ b/src/content/posts/jar-of-sweetness.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Jars Full of Sweetness"
-date: "September 15, 2025"
+date: "2025-09-15"
 hero: "/images/recipes/cookies/m-and-m-cookies.png"
 tags: ["kitchen"]
 text: |
