--- a/src/content/posts/luxury-meadows.mdx
+++ b/src/content/posts/luxury-meadows.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Luxury of the Meadows"
-date: "August 7, 2025"
+date: "2025-08-20"
 hero: "/images/posts/little-wildflowers.jpeg"
 tags: ["woodland"]
 text: |
