--- a/src/content/recipes/m-and-m-cookies.mdx
+++ b/src/content/recipes/m-and-m-cookies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "M&M Cookies"
-date: "August 4, 2025"
+date: "2025-09-15"
 hero: "/images/recipes/cookies/m-and-m-cookies.png"
 tags: ["cookies"]
 
