Make DropDownPanel AllPosts, Woodland Finds, etc., AllRecipes, Spice-Mix, etc, sorted by most recent, then sorted alphabetically by title

--- a/src/content/recipes/oatmeal-raisin-cookies.mdx
+++ b/src/content/recipes/oatmeal-raisin-cookies.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Oatmeal Raisin Cookies"
-date: "8-15"
+date: "2025-09-15"
 hero: "/images/recipes/cookies/oatmeal-raisin-cookies.png"
 tags: ["cookies"]
 
