Add craft posts x4; add crafts dropDownPanel

--- a/src/content/posts/ballband-kitchen-clothes.mdx
+++ b/src/content/posts/ballband-kitchen-clothes.mdx
@@ -1,20 +1,16 @@
 ---
-title: "Ballband Kitchen Clothes"
+title: "My Dishie Clothes"
 date: "2025-08-25"
 hero: "/images/posts/ballband.jpeg"
 tags: ["crafts"]
 text: |
   I love keeping my hands busy, even when I’m relaxing. Quiet evenings are often spent with music or an audiobook playing, knitting away at the same familiar project. 
 
-  For me, that’s the classic ballband dishcloth. I first found this pattern years ago on Canadian Living, and I’ve been making it ever since.  
+  For me, that’s the classic ballband dishcloth. I first found this pattern years ago on <a href="https://www.canadianliving.com/home-and-garden/knitting-and-crochet/article/knit-a-ballband-dishcloth" target="_blank" rel="noopener noreferrer">Canadian Living</a>, and I’ve been making it ever since.  
 
-  Always with Dishie cotton yarn from Knit Picks. At this point, I’ve made every color combination under the sun.
+  Always with Dishie cotton yarn from <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Knit Picks</a>. At this point, I’ve made every color combination under the sun.
 
   My kitchen drawers are full of them, and they get daily use — wiping counters, drying dishes, and generally making themselves indispensable.
 
-  If you’re a knitter (or want to be), here’s my pattern for the little kitchen clothes I make, the original pattern from Canadian Living, and the cotton Dishie yarn from Knit Picks.
-
-  🧶 My Pattern: <a href="/downloads/patterns/ballband-pattern.pdf" target="_blank" rel="noopener noreferrer">My Dishie Clothes</a>
-  🧶 Original Pattern: <a href="https://www.canadianliving.com/home-and-garden/knitting-and-crochet/article/knit-a-ballband-dishcloth" target="_blank" rel="noopener noreferrer">Ballband Dishcloth</a>  
-  🧶 Dishie Cotton Yarn: <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Dishie Cotton from Knit Picks</a>
+  🧶 <a href="/crafts/ballband-kitchen-clothes" target="_blank" rel="noopener noreferrer">Ballband Dishie Clothes</a> for endless knitting with my simple pattern.
 ---
