--- a/src/content/posts/jar-of-flavor.mdx
+++ b/src/content/posts/jar-of-flavor.mdx
@@ -14,9 +14,9 @@ text: |
 
   🍯 <a href="/recipes/bold-earth">Bold Earth</a> is warm and grounding — I love it on roasted sweet potatoes. 
 
-  🫙 <a href="/posts/sweet-harmony">Sweet Harmony</a> adds spiced goodness to baked squash or apple-forward dishes.  
+  🫙 <a href="/recipes/sweet-harmony">Sweet Harmony</a> adds spiced goodness to baked squash or apple-forward dishes.  
 
   🍯 <a href="/recipes/savory-soul">Savory Soul</a> is great with chicken or lentils, full of cozy kitchen energy.
 
-  🫙 <a href="/posts/southwest-heat">Southwest Heat</a> kicks up tacos, beans, and grilled corn.
+  🫙 <a href="/recipes/southwest-heat">Southwest Heat</a> kicks up tacos, beans, and grilled corn.
 ---
