--- a/src/content/about.mdx
+++ b/src/content/about.mdx
@@ -5,9 +5,15 @@ hero: "/images/posts/breakfast-raspberries.jpeg"
 tags:
   - about
 text: |
-  I’m Little. Mother, home cook, and creator of Simple Intentions, a quiet corner of the web inspired by the warmth of Vermont’s simple living.
+  I’m a mother, home cook, crafter, opportunistic forager and creator of Simple Intentions, a quiet corner of the web inspired by the warmth of Vermont’s simple living.
 
   A space to share recipes, seasonal foraging finds, and reflections on intentional living. With my daughters beside me, we savor small joys. Laughter in the kitchen, wild mushrooms in a basket, and meals made with love and simplicity.
+
+  Why Simple Intentions?  Because life is full and noisy, and I want a home that feels steady. 
+
+  This project is my practice of choosing less-but-better—cooking from what we have, honoring Vermont’s seasons, and teaching my girls simple systems they can repeat. 
+
+  Here you’ll find pantry-first recipes, safe and respectful foraging notes, and small rituals that make ordinary days feel cared for.
 
   Simple Intentions is a journal of those moments. From pantry blends to backyard treasures, each post is a celebration of slow, homemade magic, and the belief that simple intentions create a rich, joyful life.
 
