Add new posts and projects in crafts

--- a/src/content/posts/origami-cranes.mdx
+++ b/src/content/posts/origami-cranes.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Fairy House"
-date: "07-05-2025"
-hero: "/images/crafts/fairy-house.png"
-tags: ["other-crafts"]
+title: "Wishing Upon a Thousand Cranes"
+date: "08-05-2025"
+hero: "/images/crafts/origami-cranes.jpeg"
+tags: ["crafts", "other-crafts"]
 text: |
   Every few seasons, my girls and I build fairy houses to scatter around our woods.  It's a little touch of whimsy that fills my heart when I'm outside breathing in the universe.
 
