--- a/src/content/crafts/chai-sugar-cubes.mdx
+++ b/src/content/crafts/chai-sugar-cubes.mdx
@@ -1,14 +1,19 @@
 ---
-title: "Homemade Sugar Cubes"
-date: "07-01-2025"
+title: "Homemade Chai Sugar Cubes"
+date: "08-01-2025"
 hero: "/images/crafts/sugar-cubes.png"
 tags: ["kitchen-crafts"]
 text: |
-  Homemade sugar cubes are the quintessential homemade easy peasy gift.
+  Homemade sugar cubes are the quintessential homemade easy peasy gift.  Give it a twist of spice with classic chai flavors!
 
   Materials:
   - 1 cup white, cane, or brown sugar
-  - 1 teascpoon water
+  - 1 Tablespoon water
+  - 1/2 teaspoon of cardamom
+  - 1/2 teaspoon of cinnamon
+  - 1/2 teaspoon of ginger
+  - 1/2 teaspoon of nutmeg
+  - 1/4 teaspoon of clove
   - silicone molds of your choice
 
   Instructions:
