--- a/src/content/crafts/smoked-sugar-cubes.mdx
+++ b/src/content/crafts/smoked-sugar-cubes.mdx
@@ -1,14 +1,15 @@
 ---
-title: "Homemade Sugar Cubes"
-date: "07-01-2025"
-hero: "/images/crafts/sugar-cubes.png"
-tags: ["kitchen-crafts"]
+title: "Homemade Smoked Sugar Cubes"
+date: "10-01-2025"
+hero: "/images/crafts/smoked-sugar-cubes.jpg"
+tags: ["crafts", "kitchen-crafts"]
 text: |
-  Homemade sugar cubes are the quintessential homemade easy peasy gift.
+  Homemade sugar cubes are the quintessential homemade easy peasy gift.  Give it a twist of spice with classic chai flavors!
 
   Materials:
   - 1 cup white, cane, or brown sugar
-  - 1 teascpoon water
+  - 2 teaspoons smoke tincture
+  - 2 teaspoons water
   - silicone molds of your choice
 
   Instructions:
