--- a/src/content/posts/birdseed-ornaments.mdx
+++ b/src/content/posts/birdseed-ornaments.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Fairy House"
-date: "07-05-2025"
-hero: "/images/crafts/fairy-house.png"
-tags: ["other-crafts"]
+title: "Birdseed Ornaments"
+date: "09-05-2025"
+hero: "/images/crafts/birdseed-ornament.png"
+tags: ["crafts", "other-crafts"]
 text: |
   Every few seasons, my girls and I build fairy houses to scatter around our woods.  It's a little touch of whimsy that fills my heart when I'm outside breathing in the universe.
 
