--- a/src/content/posts/pussy-hat.mdx
+++ b/src/content/posts/pussy-hat.mdx
@@ -1,8 +1,8 @@
 ---
 title: "One Skein Wonder"
-date: "2025-08-25"
+date: "08-25-2025"
 hero: "/images/crafts/little-pussy-hat.jpeg"
-tags: ["knitting"]
+tags: ["crafts", "knitting"]
 text: |
   My 10 year old recently came home with a skein of pink fluffy yarn she purchased at the local dollar store.
 
