Clean lint issue

--- a/src/content/crafts/chai-sugar-cubes.mdx
+++ b/src/content/crafts/chai-sugar-cubes.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Homemade Chai Sugar Cubes"
+title: "Chai Sugar Cubes"
 date: "08-01-2025"
 hero: "/images/crafts/sugar-cubes.png"
 tags: ["kitchen-crafts"]
