--- a/src/content/crafts/lemon-sugar-cubes.mdx
+++ b/src/content/crafts/lemon-sugar-cubes.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Homemade Lemon Sugar Cubes"
+title: "Lemon Sugar Cubes"
 date: "09-01-2025"
 hero: "/images/crafts/lemon-sugar-cubes.png"
 tags: ["kitchen-crafts"]
