--- a/src/content/crafts/smoked-sugar-cubes.mdx
+++ b/src/content/crafts/smoked-sugar-cubes.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Homemade Smoked Sugar Cubes"
+title: "Smoked Sugar Cubes"
 date: "10-01-2025"
 hero: "/images/crafts/smoked-sugar-cubes.jpg"
 tags: ["crafts", "kitchen-crafts"]
