--- a/src/content/crafts/sugar-cubes.mdx
+++ b/src/content/crafts/sugar-cubes.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Homemade Sugar Cubes"
+title: "Sugar Cubes"
 date: "07-01-2025"
 hero: "/images/crafts/sugar-cubes.png"
 tags: ["kitchen-crafts"]
