--- a/src/content/posts/symbiosis.mdx
+++ b/src/content/posts/symbiosis.mdx
@@ -1,7 +1,7 @@
 ---
 title: "The Beauty of Symbiosis"
 date: "08-30-2025"
-hero: "/images/posts/lichen.jpeg"
+hero: "/images/posts/lichen.png"
 tags: ["woodland"]
 text: |
 
