--- a/src/content/posts/jar-of-flavor.mdx
+++ b/src/content/posts/jar-of-flavor.mdx
@@ -4,13 +4,11 @@ date: "07-01-2025"
 hero: "/images/posts/bold-earth.png"
 tags: ["kitchen"]
 text: |
-  I’m notoriously both lazy and busy. While I do love the romance of an all-day simmering sauce — the slow bubllings of a pot on the stove, the kitchen filled with tantalizing scents — most days are far too hectic for that kind of cooking. 
+  I’m notoriously both lazy and busy. While I love the romance of an all-day simmering sauce—the slow bubblings of a pot on the stove, the kitchen filled with tantalizing scents—most days are too hectic for that kind of cooking.
 
-  That’s where my jars of go-to spice mixes come in as a quiet blessing. Every so often, my younger daughter and I set aside a Saturday morning to measure, mix, and stir together our favorite blends. 
+  That’s where my jars of go-to spice mixes quietly save the day. Every so often, my younger daughter and I set aside a Saturday morning to measure, mix, and stir together a few favorite blends.
 
-  It’s a simple ritual: spoonfuls of this and that, a little giggling over the spice scale, and jars lined up neatly on the shelf by the time we’re done. 
-
-  Keeping a small stash of pre-made blends makes weeknight dinners effortless. A sprinkle over a piece of chicken or roasted vegetables, a quick sauté, a side or two — and just like that, dinner is on the table without the drama.
+  It’s a simple ritual: spoonfuls of this and that, a little giggling over the measuring spoons, and neat rows of jars by the time we’re done. Keeping a small stash of pre-made blends makes weeknights effortless.  A sprinkle on chicken or roasted vegetables, a quick sauté, a side or two—and dinner is on the table without the drama.
 
   🍯 <a href="/recipes/bold-earth">Bold Earth</a> is warm and grounding — I love it on roasted sweet potatoes. 
 
