Add crayon post

--- a/src/content/crafts/pussy-hat.mdx
+++ b/src/content/crafts/pussy-hat.mdx
@@ -2,7 +2,7 @@
 title: "Pussy Hat"
 date: "08-25-2025"
 hero: "/images/crafts/little-pussy-hat.jpeg"
-tags: ["knitting"]
+tags: ["crafts", "knitting"]
 text: |
   We all love the one skein wonders that can also double as the best gifts ever.
 
