--- a/src/content/crafts/sugar-cubes.mdx
+++ b/src/content/crafts/sugar-cubes.mdx
@@ -2,7 +2,7 @@
 title: "Sugar Cubes"
 date: "07-01-2025"
 hero: "/images/crafts/sugar-cubes.png"
-tags: ["kitchen-crafts"]
+tags: ["crafts", "kitchen-crafts"]
 text: |
   Homemade sugar cubes are the quintessential homemade easy peasy gift.
 
