Add Pinterest icon and link to save

--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -3,8 +3,11 @@ title: "Bold Earth"
 date: "07-15-2025"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
-text: "My Bold Earth spice mix is a family favorite — a jar of vibrant, warm spices that’s a culinary passport to the rich and storied cultures of North Africa. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. It turns everyday cooking into an adventure, inviting you to savor the depth and complexity of a place where spices tell stories, meals bring people together, and flavors celebrate life’s vibrancy."
-textToo: "For a gloriously simple dinner, scatter it over chicken thighs and whatever vegetables the season offers, then roast until tender. Add rice, and you have a meal that’s both grounding and full of quiet adventure."
+text: |
+  My Bold Earth spice mix is a family favorite — a jar of vibrant, warm spices that’s a culinary passport to the rich and storied cultures of North Africa. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
+
+  It turns everyday cooking into an adventure, inviting you to savor the depth and complexity of a place where spices tell stories, meals bring people together, and flavors celebrate life’s vibrancy.
+
 yield: "3/4 cup"
 prep time: "5 minutes"
 ingredients:
@@ -31,9 +34,9 @@ bakingIngredients:
 
 bakingSteps:
   - "Preheat oven to 425°."
-  - "Place chicken thighs on sheet pan, nestled among the brocooli florets."
+  - "Place chicken thighs on sheet pan, nestled among the brocolli florets."
   - "Drizzle olive oil over chicken thighs and brocooli florets."
-  - "Sprinkle Bold Earth over the chicken thighs and brocooli floretss."
+  - "Sprinkle Bold Earth over the chicken thighs and brocolli florets."
   - "Bake for 40-45 minutes.  Enjoy with rice or other sides."
 
 pdf: "bold-earth.pdf"
