--- a/src/content/recipes/southwest-heat.mdx
+++ b/src/content/recipes/southwest-heat.mdx
@@ -22,15 +22,15 @@ steps:
   - "Measure and mix all ingredients together."
   - "Store or use as desired."
 
-bakingPrepTime: "10 minutes"
-bakingTime: "45 minutes"
-bakingIngredients:
+cookingPrepTime: "10 minutes"
+cookingTime: "45 minutes"
+cookingIngredients:
   - "1 pound of ground beef (or your choice of protein)"
   - "1 sweet onion, chopped"
   - "1/4 cup water"
   - "3 Tablespoons of Southwest Heat"
 
-bakingSteps:
+cookingSteps:
   - "Heat skillet."
   - "Brown ground beef."
   - "Drain excess oil."
