Add pic of fairy house; Create LinkReturnPost component

--- a/src/content/crafts/fairy-house.mdx
+++ b/src/content/crafts/fairy-house.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Fairy House"
 date: "07-05-2025"
-hero: "/images/crafts/fairy-house.png"
+hero: "/images/crafts/fairy-house.jpeg"
 tags: ["other-crafts"]
 text: |
   Every few seasons, my girls and I build fairy houses to scatter around our woods.  It's a little touch of whimsy that fills my heart when I'm outside breathing in the universe.
