--- a/src/content/posts/birdseed-ornaments.mdx
+++ b/src/content/posts/birdseed-ornaments.mdx
@@ -4,12 +4,13 @@ date: "10-05-2025"
 hero: "/images/crafts/birdseed-ornament.png"
 tags: ["crafts", "other-crafts"]
 text: |
-  Every few seasons, my girls and I build fairy houses to scatter around our woods.  It's a little touch of whimsy that fills my heart when I'm outside breathing in the universe.
+  Living in Vermont, we're careful about when we put out our bird feeders.  Black bears are opportunistic foragers, and a bounty of suet and seeds are a bear's delight!
 
-  Made with little bits of this and that, including buttons, dried moss, sea shells, pinecorns, ribbons, and other found bits from our craft room or the woods.
+  The rule of thumb is if it's been "wintery" long enough for a bear to hibernate, with snow accumulation holding for a few weeks, you can probably put out bird feed without attracting bears.
 
-  🏠 <a href="https://www.pussyhatproject.com/mission" target="_blank" rel="noopener noreferrer">Pussy Hat Mission</a>  
-  🏠 <a href="https://www.pussyhatproject.com/knit" target="_blank" rel="noopener noreferrer">Pussy Hat Pattern</a>
+  In calendar time, that's about December 1 through March 31.  But it's hard telling, not knowing.
+
+  🏠 <a href="https://www.pussyhatproject.com/mission" target="_blank" rel="noopener noreferrer">Pussy Hat Mission</a>
 
 pdf: "pussy-hat.pdf"
 ---
