--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -3,6 +3,7 @@ title: "Bold Earth"
 date: "07-15-2025"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
+parentPost: "/posts/bold-earth"
 text: |
   My Bold Earth spice mix is a family favorite — a jar of vibrant, warm spices that’s a culinary passport to the rich and storied cultures of North Africa. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
 
