Add SectionCards to Jarring and Cooking/Baking Instructions

--- a/src/content/crafts/ballband-kitchen-clothes.mdx
+++ b/src/content/crafts/ballband-kitchen-clothes.mdx
@@ -3,6 +3,7 @@ title: "Ballband Dishie Clothes"
 date: 07-25-2025"
 hero: "/images/posts/ballband.jpeg"
 tags: ["knitting"]
+parentPost: "/posts/ballband"
 text: |
   My all time classic - the ballband dishie clothes. I first found this pattern years ago on Canadian Living, and I’ve been making it ever since.  
 
