--- a/src/content/crafts/lemon-sugar-cubes.mdx
+++ b/src/content/crafts/lemon-sugar-cubes.mdx
@@ -3,6 +3,7 @@ title: "Lemon Sugar Cubes"
 date: "09-01-2025"
 hero: "/images/crafts/lemon-sugar-cubes.png"
 tags: ["crafts", "kitchen-crafts"]
+parentPost: "/posts/lemon-sugar-cubes"
 text: |
   Homemade sugar cubes are the quintessential homemade easy peasy gift.  Give it a twist of spice with classic chai flavors!
 
