--- a/src/content/crafts/smoked-sugar-cubes.mdx
+++ b/src/content/crafts/smoked-sugar-cubes.mdx
@@ -3,6 +3,7 @@ title: "Smoked Sugar Cubes"
 date: "10-01-2025"
 hero: "/images/crafts/smoked-sugar-cubes.jpg"
 tags: ["crafts", "kitchen-crafts"]
+parentPost: "/posts/smoked-sugar-cubes"
 text: |
   Homemade sugar cubes are the quintessential homemade easy peasy gift.  Give it a twist of spice with classic chai flavors!
 
