--- a/src/content/posts/bold-earth.mdx
+++ b/src/content/posts/bold-earth.mdx
@@ -16,7 +16,7 @@ text: |
 
   For a gloriously simple dinner, I sprinkle it over chicken thighs and whatever vegetables the season offers, then roast until tender. Add rice, and you have a meal that’s both grounding and full of quiet adventure.
 
-  Ready to cook?
+  Ready to flavor up?
 
-  <a href="/recipes/bold-earth">Bold Earth Recipe  →</a></p>
+  🍯 <a href="/recipes/bold-earth">Bold Earth Spice Mix Recipe</a></p>
 ---
