--- a/src/content/recipes/cheesy-chili-mac.mdx
+++ b/src/content/recipes/cheesy-chili-mac.mdx
@@ -3,7 +3,7 @@ title: "Cheesy Chili Mac"
 date: "09-15-2025"
 hero: "/images/recipes/soup-pasta/cheesy-chili-mac.png"
 tags: ["soup-pasta"]
-
+parentPost: "/posts/cheesy-chili-mac"
 text: |
   Our Cheesy Chili Mac is a classic blend of warmth and comfort, capturing the essence of home in every spoonful. The tender egg noodles pair perfectly with the savory notes of minced onion, celery, and carrots, creating a medley of flavors that feels like a cozy hug on a chilly day.
 
