--- a/src/content/recipes/m-and-m-cookies.mdx
+++ b/src/content/recipes/m-and-m-cookies.mdx
@@ -3,7 +3,7 @@ title: "M&M Cookies"
 date: "08-15-2025"
 hero: "/images/recipes/cookies/m-and-m-cookies.png"
 tags: ["cookies"]
-
+parentPost: "/posts/m-and-m-cookies"
 text: "My M&M Cookie mix is a celebration of sweet, nostalgic flavors and endless versatility, perfect for every holiday and special occasion. The soft, chewy cookie base is a delightful canvas, made even more festive with the bright crunch of classic M&M candies.
 
 This mix is elevated by a carefully balanced blend of vanilla and brown sugar, creating a rich, buttery dough that bakes to perfection every time. Each bite delivers a burst of sweetness and a playful pop of color, making these cookies a treat for both the eyes and the taste buds.Designed for versatility, this mix invites your creativity. Swap out the M&Ms for seasonal sprinkles, chocolate chips, or crushed peppermint for a personalized holiday twist. Whether you’re baking for a cozy evening in or sharing treats with loved ones, our M&M Cookie mix brings joy and sweetness to every celebration."
