--- a/src/content/recipes/oatmeal-raisin-cookies.mdx
+++ b/src/content/recipes/oatmeal-raisin-cookies.mdx
@@ -3,7 +3,7 @@ title: "Oatmeal Raisin Cookies"
 date: "08-15-2025"
 hero: "/images/recipes/cookies/oatmeal-raisin-cookies.png"
 tags: ["cookies"]
-
+parentPost: "/posts/oatmeal-raisin-cookies"
 text: "My Oatmeal Raisin Cookie mix is a timeless blend of hearty textures and warm, nostalgic flavors, making it the perfect treat for any occasion. The soft, spiced cookie base, elevated by the rich sweetness of raisins, a touch of cinnamon, and freshly grated nutmeg, combines beautifully with the earthy crunch of walnuts and the wholesome chew of old-fashioned oats.
 
 This classic mix invites endless possibilities—add a handful of shredded coconut for a tropical flair, drizzle with honey for extra sweetness, or swap walnuts for pecans to suit your taste. Whether you’re baking for a comforting family dessert or sharing a homemade gift, our Oatmeal Raisin Cookie mix brings a touch of warmth and love to every bite."
