--- a/src/content/crafts/chai-sugar-cubes.mdx
+++ b/src/content/crafts/chai-sugar-cubes.mdx
@@ -3,6 +3,7 @@ title: "Chai Sugar Cubes"
 date: "08-01-2025"
 hero: "/images/crafts/sugar-cubes.png"
 tags: ["kitchen-crafts"]
+parentPost: "/posts/sugar-cubes"
 text: |
   Homemade sugar cubes are the quintessential homemade easy peasy gift.  Give it a twist of spice with classic chai flavors!
 
