--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Bold Earth"
-date: "07-15-2025"
+date: "07-01-2025"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
 parentPost: "/posts/bold-earth"
 text: |
-  My Bold Earth spice mix is a family favorite — a jar of vibrant, warm spices that’s a culinary passport to the rich and storied cultures of North Africa. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
+  My Bold Earth spice mix is a family favorite. Each sprinkle carries the earthy heat of the Sahara, the smoky allure of bustling souks, and the sweet, aromatic whispers of ancient trade routes. 
 
   It turns everyday cooking into an adventure, inviting you to savor the depth and complexity of a place where spices tell stories, meals bring people together, and flavors celebrate life’s vibrancy.
 
@@ -29,16 +29,19 @@ bakingPrepTime: "10 minutes"
 bakingTime: "45 minutes"
 bakingIngredients:
   - "1.5 pounds of chicken thigh with skin/bone (or your choice of protein)"
-  - "2 cups of broccoli, cut into bite-sized florets"
-  - "3 Tablespoons of Bold Earth spice mix"
+  - "1 large eggplant, cut into bite-sized cubes"
+  - "2 Tablespoons of olive oil"
+  - "2 Tablespoons of Bold Earth spice mix"
   - "2 Tablespoons of olive oil"
 
 bakingSteps:
   - "Preheat oven to 425°."
-  - "Place chicken thighs on sheet pan, nestled among the brocolli florets."
-  - "Drizzle olive oil over chicken thighs and brocooli florets."
-  - "Sprinkle Bold Earth over the chicken thighs and brocolli florets."
-  - "Bake for 40-45 minutes.  Enjoy with rice or other sides."
+  - "Toss eggplant cubes in 2 Tablespoons of olive oil until thoroughly coated; spread on a sheet pan."
+  - "Pat chicken thigh dry.  Rub with remaining 2 Tablespoons of olive oil and 2 Tablespoons of Bold Earth spice mix."
+  - "Nestle chicken thighs, with skin-side up, on top of the eggplant cubes."
+  - "Bake for 20 minutes.  Toss eggplants and rotate sheet pan."
+  - "Continue baking for another 20-25 minutes until chicken skin is golden and eggplants are tender with browned edges."
+  - "Enjoy with rice or other sides."
 
 pdf: "bold-earth.pdf"
 ---
