--- a/src/content/recipes/chocolate-cranberry-cookies.mdx
+++ b/src/content/recipes/chocolate-cranberry-cookies.mdx
@@ -3,7 +3,7 @@ title: "Chocolate Cranberry Cookies"
 date: "08-15-2025"
 hero: "/images/recipes/cookies/chocolate-cranberry-cookies.png"
 tags: ["cookies"]
-
+parentPost: "/posts/chocolate-cranberry-cookies"
 text: "My Chocolate Cranberry Cookie mix is a delightful blend of rich, decadent flavors and festive charm, perfect for any holiday or special occasion. The soft, spiced cookie base, enhanced with a hint of cinnamon, pairs beautifully with tart dried cranberries and indulgent dark chocolate chips, creating a treat that’s as comforting as it is indulgent.
 
 This versatile mix invites creativity—add a touch of orange zest for a citrusy twist, swap dark chocolate for white chocolate chips, or sprinkle in a dash of nutmeg for extra warmth. Whether you’re baking for a cozy night in or sharing with loved ones, our Chocolate Cranberry Cookie mix is the ideal way to spread sweetness and joy with every bite."
