--- a/src/content/recipes/sundried-tomato-pasta.mdx
+++ b/src/content/recipes/sundried-tomato-pasta.mdx
@@ -3,7 +3,7 @@ title: "Sundried Tomato Pasta"
 date: "09-15-2025"
 hero: "/images/recipes/soup-pasta/sundried-tomato-pasta.png"
 tags: ["soup-pasta"]
-
+parentPost: "/posts/sundried-tomato-pasta"
 text: |
   Our Sundried Tomato Pasta is a celebration of bold flavors and comforting simplicity, bringing a touch of Mediterranean warmth to your table. Al dente cavatappi pasta serves as the perfect base, mingling beautifully with the vibrant sweetness of sundried tomatoes and the subtle heat of red chili.
 
