--- a/src/content/recipes/ultimate-brownies.mdx
+++ b/src/content/recipes/ultimate-brownies.mdx
@@ -3,7 +3,7 @@ title: "Ultimate Brownies"
 date: "08-15-2025"
 hero: "/images/recipes/cookies/ultimate-brownies.png"
 tags: ["cookies"]
-
+parentPost: "/posts/ultimate-brownies"
 text: "Indulge in the ultimate chocolate lover’s dream with our Fudgy Brownie Mix in a jar. Crafted with premium cocoa and perfectly balanced dry ingredients, this mix guarantees thick, gooey brownies with every bake.
 
 Whether you’re baking for a special occasion, a cozy night in, or just because, this jar makes it easy to whip up a batch of decadent, homemade brownies without the fuss. All you need are a few simple pantry staples to transform this mix into a tray of rich, chocolatey goodness."
