Add SectionCard to Craft Posts

--- a/src/content/crafts/ballband-kitchen-clothes.mdx
+++ b/src/content/crafts/ballband-kitchen-clothes.mdx
@@ -1,9 +1,10 @@
 ---
 title: "Ballband Dishie Clothes"
-date: 07-25-2025"
+date: "07-25-2025"
 hero: "/images/posts/ballband.jpeg"
 tags: ["knitting"]
 parentPost: "/posts/ballband"
+
 text: |
   My all time classic - the ballband dishie clothes. I first found this pattern years ago on Canadian Living, and I’ve been making it ever since.  
 
@@ -11,14 +12,17 @@ text: |
 
   My kitchen drawers are full of them, and they get daily use — wiping counters, drying dishes, and generally making themselves indispensable.
 
-  Size: Approximately 5.5" x 8.5
+  🧶 Original Pattern: <a href="https://www.canadianliving.com/home-and-garden/knitting-and-crochet/article/knit-a-ballband-dishcloth" target="_blank" rel="noopener noreferrer">Ballband Dishcloth</a>  
+  🧶 Dishie Cotton Yarn: <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Dishie Cotton from Knit Picks</a>
 
-  Materials: Dishie worsted weight by Knit Picks in two contrasting colors. Size 6 needles.
+size: 'Approximately 5.5" x 8.5"'
+materials:
+  - "Dishie worsted weight by Knit Picks (two contrasting colors)"
+  - "US 6 needles"
+gauge: "Unimportant"
 
-  Gauge: unimportant
-
-  Instructions:
-
+# Use a multiline string (LayoutCraft expects a string, not an array)
+instructions: |
   Cast on: With A, CO 49 sts.
   Row 1: Using A, knit.
   Row 2: Purl.
@@ -40,9 +44,6 @@ text: |
   Repeat: Repeat rows 5-10 once.
   Repeat: Repeat rows 9-10 once more.
   Bind off.
-
-  🧶 Original Pattern: <a href="https://www.canadianliving.com/home-and-garden/knitting-and-crochet/article/knit-a-ballband-dishcloth" target="_blank" rel="noopener noreferrer">Ballband Dishcloth</a>  
-  🧶 Dishie Cotton Yarn: <a href="https://www.knitpicks.com/yarn/dishie/c/5420207" target="_blank" rel="noopener noreferrer">Dishie Cotton from Knit Picks</a>
 
 pdf: "ballband-pattern.pdf"
 ---
