--- a/src/content/posts/fairy-house.mdx
+++ b/src/content/posts/fairy-house.mdx
@@ -1,15 +1,16 @@
 ---
-title: "Fairy House"
+title: "Whimsical Fairy Homes"
 date: "07-05-2025"
 hero: "/images/crafts/fairy-house.jpeg"
 tags: ["crafts", "other-crafts"]
 text: |
-  Every few seasons, my girls and I build fairy houses to scatter around our woods.  It's a little touch of whimsy that fills my heart when I'm outside breathing in the universe.
+  Every few seasons, my girls and I tuck tiny fairy houses around our woods—a small shimmer of wonder that greets us on every walk.
 
-  Made with little bits of this and that, including buttons, dried moss, sea shells, pinecorns, ribbons, and other found bits from our craft room or the woods.
+  Built from found bits—twigs, pinecones, pebbles, shells, dried moss, ribbon, buttons—and finished with a quick swipe of paint and a dot of glue, each one feels like a secret we’re sharing with the trees.
 
-  🏠 <a href="https://www.pussyhatproject.com/mission" target="_blank" rel="noopener noreferrer">Pussy Hat Mission</a>  
-  🏠 <a href="https://www.pussyhatproject.com/knit" target="_blank" rel="noopener noreferrer">Pussy Hat Pattern</a>
+  Ready to add a little whimsy?
 
-pdf: "pussy-hat.pdf"
+  🧚🏼 <a href="/crafts/fairy-house">Whimsical Fairy Homes</a></p>
+
+pdf: "dish-clothes-wrapper.pdf"
 ---
