Add RecipeFrontmatter to /recipes/[slug]/page.tsx

--- a/src/content/posts/crayons.mdx
+++ b/src/content/posts/crayons.mdx
@@ -7,7 +7,11 @@ text: |
 
   I suspect that many of us have baskets, or bins, or drawers, full of random crayons in different sizes, colors, and brands collected over the years.
 
+  Stuff
 
+  and
+
+  Stuff
 
   🏠 <a href="https://www.pussyhatproject.com/mission" target="_blank" rel="noopener noreferrer">Pussy Hat Mission</a>  
   🏠 <a href="https://www.pussyhatproject.com/knit" target="_blank" rel="noopener noreferrer">Pussy Hat Pattern</a>
