--- a/src/content/posts/sweet-harmony.mdx
+++ b/src/content/posts/sweet-harmony.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Jars Full of Sweet Harmony"
+title: "Jars of Sweet Harmony"
 date: "10-01-2025"
 hero: "/images/posts/sweet-harmony.png"
 tags: ["kitchen"]
