Set up Open API

--- a/src/content/about.mdx
+++ b/src/content/about.mdx
@@ -5,17 +5,17 @@ hero: "/images/posts/breakfast-raspberries.jpeg"
 tags:
   - about
 text: |
-  I’m a mother, home cook, crafter, opportunistic forager and creator of Simple Intentions, a quiet corner of the web inspired by the warmth of Vermont’s simple living.
+  I’m Little - mother, home cook, crafter, opportunistic forager and the heart behind Simple Intentions, a quiet corner of the web inspired by the warmth of Vermont’s simple, intentional living.
 
-  This is a space to share pantry-first recipes, seasonal foraging notes, crafty projects, and reflections on intentional living. With my daughters beside me, we savor small joys. Laughter in the kitchen, wild mushrooms in a basket, and meals made with love and simplicity.
+  This is where pantry-first recipes, seasonal foraging notes, easy crafty projects gather with reflections on living with purpose and intention. With my daughters beside me, we savor small joys. Laughter in the kitchen, wild mushrooms in a basket, and weeknight meals made with love and simplicity.
 
-  Why Simple Intentions?  Because life is noisy, and I want a home that feels steady. And I do so with as much intention and simplicity as I can.
+  Why Simple Intentions?  Because life is noisy, and I want a home that feels steady. By choosing to focus on a few clear values, and returning to them, we make room for the right opportunities to find us.
 
-  This project is my practice of choosing less-but-better.  Cooking from what we have, honoring Vermont’s seasons, and teaching my girls simple systems they can repeat. 
+  That's my life project. Less-but-better.  Cooking from what we have, honoring the seasons, and simple and repeatable so that my daughters can carry it forward with ease. 
 
   Here you’ll find pantry blends, safe and respectful foraging notes, and small rituals that make ordinary days feel cared for.
 
-  Simple Intentions is a journal of those moments. From pantry blends to backyard treasures, each post is a celebration of slow, homemade magic, and the belief that simple intentions create a rich, joyful life.
+  Simple Intentions is a journal of those moments. From pantry blends to backyard treasures, each post is a quiet celebration of the homemade and humane.  Carrying forth the belief that simple intentions create a rich, joyful life.
 
   Thank you for wandering through these pages. I hope they bring a bit of comfort, inspiration, or spark to your own table.
 
