--- a/src/content/crafts/fairy-house.mdx
+++ b/src/content/crafts/fairy-house.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Whimsical Fairy Homes"
+title: "Create Your Own Fairy Homes"
 date: "07-05-2025"
 hero: "/images/crafts/fairy-house.jpeg"
 tags: ["other-crafts"]
