--- a/src/content/posts/birdseed-ornaments.mdx
+++ b/src/content/posts/birdseed-ornaments.mdx
@@ -10,7 +10,7 @@ text: |
 
   In calendar time, that's about December 1 through March 31.  But it's hard telling, not knowing.
 
-  🏠 <a href="https://www.pussyhatproject.com/mission" target="_blank" rel="noopener noreferrer">Pussy Hat Mission</a>
+  🏠 <a href="/crafts/birdseed-ornaments">Birdseed Ornaments</a>
 
 pdf: "pussy-hat.pdf"
 ---
