--- a/src/content/posts/bold-earth.mdx
+++ b/src/content/posts/bold-earth.mdx
@@ -1,10 +1,10 @@
 ---
-title: "Jar Full of Bold Earth"
+title: "Jar of Bold Earth"
 date: "07-01-2025"
 hero: "/images/recipes/spice-mix/bold-earth.png"
 tags: ["spice-mix"]
 text: |
-  I’m notoriously both lazy and busy. While I love the romance of an all-day simmering sauce—the slow bubblings of a pot on the stove, the kitchen filled with tantalizing scents—most days are too hectic for that kind of cooking.
+  I’m notoriously both lazy and busy. While I love the romance of an all-day simmering sauce, the slow bubblings of a pot on the stove, the kitchen filled with tantalizing scents, most days are too hectic for that kind of cooking.
 
   That’s where my jars of go-to spice mixes quietly save the day. Every so often, my younger daughter and I set aside a Saturday morning to measure, mix, and stir together a few favorite blends.
 
