--- a/src/content/posts/cheesy-chili-mac.mdx
+++ b/src/content/posts/cheesy-chili-mac.mdx
@@ -1,12 +1,10 @@
 ---
 title: "Jars of Cheesy Chili Mac"
-date: "11-01-2025"
+date: "12-01-2025"
 hero: "/images/recipes/soup-pasta/cheesy-chili-mac.png"
 tags: ["kitchen"]
 text: |
   Something about comfort food with a kick...
 
-  🍯 <a href="/recipes/savory-soul">Savory Soul</a> is great with chicken or lentils, full of cozy kitchen energy.
-
-  🫙 <a href="/recipes/southwest-heat">Southwest Heat</a> kicks up tacos, beans, and grilled corn.
+  🫙 <a href="/recipes/cheesy-chili-mac">Cheesy Chili Mac</a>
 ---
