--- a/src/content/recipes/bold-earth.mdx
+++ b/src/content/recipes/bold-earth.mdx
@@ -19,11 +19,12 @@ ingredients:
   - "3 teaspoons allspice"
   - "2 teaspoons cinnamon"
   - "2 teaspoons cayenne"
-  - "3 teaspoons salt"
+  - "3 teaspoons fine sea salt”
   - "3 teaspoons pepper"
 steps:
-  - "Measure and mix all ingredients together."
-  - "Store or use as desired."
+  - "Measure and whisk all ingredients together."
+  - “Transfer to a clean, dry jar. Label and date.”
+  - “Storage: cool, dark cupboard up to 6 months.”
 
 bakingPrepTime: "10 minutes"
 bakingTime: "45 minutes"
@@ -36,10 +37,10 @@ bakingIngredients:
 
 bakingSteps:
   - "Preheat oven to 425°."
-  - "Toss eggplant cubes in 2 Tablespoons of olive oil until thoroughly coated; spread on a sheet pan."
+  - "Toss eggplant cubes in 2 Tablespoons of olive oil until thoroughly coated; spread in an even layer on a sheet pan."
   - "Pat chicken thigh dry.  Rub with remaining 2 Tablespoons of olive oil and 2 Tablespoons of Bold Earth spice mix."
   - "Nestle chicken thighs, with skin-side up, on top of the eggplant cubes."
-  - "Bake for 20 minutes.  Toss eggplants and rotate sheet pan."
+  - "Bake for 20 minutes.  The internal temperature of chicken should be 165 degrees or greater.  Toss eggplants and rotate sheet pan."
   - "Continue baking for another 20-25 minutes until chicken skin is golden and eggplants are tender with browned edges."
   - "Enjoy with rice or other sides."
 
