--- a/src/content/posts/spectral-ghost-pipe.mdx
+++ b/src/content/posts/spectral-ghost-pipe.mdx
@@ -3,5 +3,15 @@ title: "Spectral Ghost Pipe"
 date: "07-10-2025"
 hero: "/images/posts/ghost-pipe.jpeg"
 tags: ["woodland"]
-text: "Ghost pipes — also called fairy smoke — are some of the strangest, most beautiful plants you’ll meet in the Vermont woods. In late July, they often appear in scattered clusters, and in good years they can carpet the forest floor with their pale, spectral blooms. Unlike most plants, ghost pipes contain no chlorophyll (hence their white, sometimes pink-tinged appearance) and can’t make their own food from sunlight. Instead, they form a unique, three-way relationship: connecting with mycorrhizal fungi in the soil, which in turn connect to nearby trees, allowing the ghost pipes to draw their nutrients through this hidden forest network. Some foragers and herbalists prepare ghost pipe tinctures, which are said to ease certain kinds of pain — especially somatic pain with a psycho-emotional component — by helping the user reframe their relationship with discomfort. Whether or not you use them medicinally, encountering a patch of ghost pipes feels like stumbling upon a bit of woodland magic."
+text: |
+
+  Ghost pipes — also called fairy smoke — are some of the strangest, most beautiful plants you’ll meet in the Vermont woods. In late July, they often appear in scattered clusters, and in good years they can carpet the forest floor with their pale, spectral blooms.
+
+  Unlike most plants, ghost pipes contain no chlorophyll (hence their white, sometimes pink-tinged appearance) and can’t make their own food from sunlight. Instead, they form a unique, three-way relationship: connecting with mycorrhizal fungi in the soil, which in turn connect to nearby trees, allowing the ghost pipes to draw their nutrients through this hidden forest network.
+
+  Some foragers and herbalists prepare ghost pipe tinctures, which are said to ease certain kinds of pain — especially somatic pain with a psycho-emotional component — by helping the user reframe their relationship with discomfort. 
+
+  Whether or not you use them medicinally, encountering a patch of ghost pipes feels like stumbling upon a bit of woodland magic.
+
+  🌱 <a href="/crafts/ghost-pipes" target="_blank" rel="noopener noreferrer">Ghost Pipe Tincture</a>
 ---
